--- a/.hintrc
+++ b/.hintrc
@@ -7,5 +7,8 @@
     "not ie 11",
     "not and_ff <= 132",
     "not firefox <= 134"
-  ]
+  ],
+  "hints": {
+    "no-inline-styles": "off"
+  }
 }
